--- a/src/components/Shared/NavbarMenu.module.css
+++ b/src/components/Shared/NavbarMenu.module.css
@@ -84,7 +84,7 @@
 
 @media screen and (max-width: 900px) {
   .navbar-menu {
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     height: 0;
