--- a/src/components/Shared/FAQ/QuestionItem.module.css
+++ b/src/components/Shared/FAQ/QuestionItem.module.css
@@ -1,57 +1,69 @@
 .question-item {
-  width: 635px;
-  height: auto;
-  background-color: transparent;
-  border-radius: 10px;
-  overflow: hidden;
-  margin-bottom: 20px;
+    width: 635px;
+    height: auto;
+    background-color: transparent;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: 20px;
 }
 
 div.fix-border div {
-  border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 0 0;
 }
 
 .question-item div img {
-  width: 18px;
-  height: 18px;
-  cursor: pointer;
-  margin-right: 20px;
-  transition: all 0.3s ease-out;
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+    margin-right: 20px;
+    transition: all 0.3s ease-out;
 }
 
 .question-item div img.question-item-animate-arrow {
-  transform: rotateZ(90deg);
+    transform: rotateZ(90deg);
 }
 
 .question-item div {
-  height: 72px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid #2b2f8f;
-  box-sizing: border-box;
-  border-radius: 10px;
+    height: 72px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #2b2f8f;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 .question-item h6 {
-  padding: 0 20px;
-  text-transform: uppercase;
+    padding: 0 20px;
+    text-transform: uppercase;
 }
 .question-item p {
-  display: none;
-  padding: 20px;
-  font-size: 14px;
-  line-height: 19.6px;
-  word-spacing: 1.2px;
-  background-color: var(--clr-primary-cold-blue);
-  transition: var(--transition);
-  text-transform: capitalize;
+    display: none;
+    padding: 20px;
+    font-size: 14px;
+    line-height: 19.6px;
+    word-spacing: 1.2px;
+    background-color: var(--clr-primary-cold-blue);
+    transition: var(--transition);
+    text-transform: capitalize;
 }
 .question-item p.showAnswer {
-  display: block;
+    display: block;
 }
 @media screen and (max-width: 768px) {
-  .question-item {
-    width: 100%;
-  }
+    .question-item {
+        width: 100%;
+    }
+}
+
+.rtlClass {
+    text-align: right;
+}
+.rtlClass div {
+    flex-direction: row-reverse;
+}
+
+.rtlClass div img {
+    margin-left: 20px;
+    transform: rotate(180deg);
 }
