--- a/src/components/Shared/Navbar.module.css
+++ b/src/components/Shared/Navbar.module.css
@@ -1,115 +1,133 @@
 .nav {
-  width: 70%;
-  max-width: 1110px;
-  min-height: 96px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 0;
-  background-color: transparent;
+    width: 70%;
+    max-width: 1110px;
+    min-height: 96px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
 }
 .right-side-nav-container {
-  max-width: 538px;
-  min-height: 56px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
+    max-width: 538px;
+    min-height: 56px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
 }
 .right-side-nav-container > ul {
-  width: 538px;
-  height: 26px;
-  list-style-type: none;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    width: 538px;
+    height: 26px;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .right-side-nav-container > ul li {
-  height: 26px;
-  font-family: var(--font-roboto);
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 25.2px;
-  text-align: center;
-  text-transform: uppercase;
-  cursor: pointer;
-  transition: var(--transition);
+    height: 26px;
+    font-family: var(--font-roboto);
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25.2px;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: var(--transition);
 }
 
 .right-side-nav-container > ul li a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .active {
-  color: var(--clr-primary-cyan);
+    color: var(--clr-primary-cyan);
 }
 
 .nav ul li:hover {
-  color: var(--clr-primary-cyan);
+    color: var(--clr-primary-cyan);
 }
 
 .btn-container {
-  width: 279px;
-  height: 56px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    width: 279px;
+    height: 56px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 select {
-  color: #fff;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  height: 26px;
-  font-family: var(--font-roboto);
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 25.2px;
-  text-align: center;
-  text-transform: uppercase;
-  cursor: pointer;
+    color: #fff;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    height: 26px;
+    font-family: var(--font-roboto);
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25.2px;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
 }
+
 .dropdown-container__nav {
-  width: 200px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
+/* RTL styles */
+.rtlClass.nav {
+    flex-direction: row-reverse;
+}
+.rtlClass.right-side-nav-container {
+    flex-direction: row-reverse;
+}
+.rtlClass.right-side-nav-container > ul {
+    flex-direction: row-reverse;
+}
+
+.rtlClass.dropdown-container__nav {
+    flex-direction: row-reverse;
+}
+
+/* End of RTL styles */
+
 @media screen and (max-width: 1110px) {
 }
 
 @media screen and (max-width: 1050px) {
 }
 @media screen and (max-width: 992px) {
-  .nav .logo-display {
-    display: none;
-  }
+    .nav .logo-display {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 768px) {
-  .nav {
-    justify-content: center;
-    width: 100%;
-  }
-  .right-side-nav-container > ul {
-    width: 100%;
-  }
-  .right-side-nav-container {
-    width: 100%;
-  }
+    .nav {
+        justify-content: center;
+        width: 100%;
+    }
+    .right-side-nav-container > ul {
+        width: 100%;
+    }
+    .right-side-nav-container {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 576px) {
-  .right-side-nav-container {
-    height: 250px;
-  }
-  .right-side-nav-container > ul {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-  }
+    .right-side-nav-container {
+        height: 250px;
+    }
+    .right-side-nav-container > ul,
+    .rtlClass.right-side-nav-container > ul {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 }
